--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>Barbearia Alura</title>
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/style-home.css">
     </head>
     <body>
         <header>
-            <h1 class="titulo-principal">Barbearia Alura</h1>
+            <div class="caixa">
+                <h1>
+                    <img src="./img/logo.png">
+                    <p class="titulo-principal">Barbearia Alura</p>
+                </h1>
+            </div>
         </header>
+
         <img id="banner" src="./img/banner.jpg">
         <div class="principal">
             <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
@@ -31,5 +37,10 @@
 
             <img class="imgBeneficios" src="./img/beneficios.jpg"
         </div>
+
+        <footer>
+            <img src="./img/logo-branco.png">
+            <p class="copyright">&copy; Copyright Barbearia Alura - 2021</p>
+        </footer>
     </body>
 </html>
